# mcp-pihole

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-version-bump.sh
src/pihole_mcp/: __init__.py  auth.py  client.py  formatting.py  server.py  validation.py
tests/: test_client.py  test_formatting.py  test_server.py  test_validation.py
